<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">History Quest</string>
    <string name="app_subtitle">Explore the Past!</string>
    <string name="ancient">Ancient Civilizations</string>
    <string name="medieval">Medieval World</string>
    <string name="modern">Modern History</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="settings">Settings</string>
    <string name="question_format">Question %1$d/%2$d</string>
    <string name="score_format">Score: %1$d</string>
    <string name="play_again">Play Again</string>
    <string name="home">Home</string>
    <string name="share">Share</string>
    <string name="share_text">I scored %1$d/%2$d on the %3$s quiz in History Quest! Can you beat my score?</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="tts_toggle">Read questions aloud</string>
    <string name="sound_toggle">Sound effects</string>
    <string name="difficulty_label">Difficulty</string>
    <string name="reset_scores">Reset All Scores</string>
    <string name="reset_confirm">Are you sure you want to reset all scores?</string>
    <string name="reset_done">All scores have been reset.</string>
    <string name="message_amazing">Outstanding! You\'re a history master!</string>
    <string name="message_good">Well done! Keep exploring history!</string>
    <string name="message_try_again">Keep studying! You\'ll improve!</string>
    <string name="next">Next</string>
    <string name="read_aloud">Read question aloud</string>
    <string name="hint">Hint</string>
    <string name="score_result">%1$d/%2$d</string>
</resources>
